# BVH

./: .gitignore  CMakeLists.txt  README.md  batch_config.json  cudaLBVH.cu  cudaLBVH_optimized.cu  karras2012_lbvh.cu  ompLBVH.cpp
cuda/: lbvh_cuda.cu  lbvh_cuda_builder.cu  lbvh_cuda_nothrust.cu  main.cpp
docs/: render_engine.md
include/: batch_config.h  batch_runner.h  bvh_builder.h  bvh_node.h  common.h  evaluator.h  mesh.h  render_engine.h
omp/: IOzaTesting.cpp  geometry.cpp  lbvh.cpp  lbvhTest.cpp  ray.cpp
src/: batch_config.cpp  batch_runner.cpp  evaluator.cpp  loader.cpp  main.cpp  opencl_main.cpp  radix_sort_test.cu  render_engine.cu  visualizer_main.cpp
src/benchmark/: sah_cost.hpp  timer.hpp
src/bvh/: bvh_builder.hpp  bvh_export.hpp  bvh_node.hpp  lbvh_builder.hpp  lbvh_cuda.cu  lbvh_cuda_builder.hpp  opencl_kernels.cl  opencl_lbvh_builder.hpp  recursive_bvh.hpp
src/cuda/: lbvh_builder.cu  lbvh_builder.cuh  lbvh_builder_nothrust.cu  lbvh_builder_nothrust.cuh  lbvh_plus_builder.cu  lbvh_plus_builder.cuh  ploc_builder.cu  ploc_builder.cuh  radix_sort_kv.cu  radix_sort_kv.cuh
src/engine/: camera.hpp  mesh_renderer.hpp  shader.hpp
src/math/: aabb.hpp  vec3.hpp
src/mesh/: obj_loader.hpp  triangle_mesh.hpp
src/visualization/: leaf_cost.hpp
